--- a/frontend/src/pages/Dashboard/styles.css
+++ b/frontend/src/pages/Dashboard/styles.css
@@ -1,3 +1,38 @@
-#page-dashboard{
-    font-size: 30px;
+svg > g > g:last-child { pointer-events: none }
+
+.page-dashboard{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.page-dashboard a{
+    font-size: 50px;
+    text-decoration: none;
+    
+}
+
+.chart-container{
+    
+    width: 440px;
+    height: 440px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.pie-chart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    border-radius: 50%;
+    box-shadow: 0 2px 20px 0 #666666;
+    width: 220px;
+    height: 220px;
+    background-color: conic-gradient(#ff9000 95%, #fff 0);
+    
 }
